--- a/TestingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/TestingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -1,40 +1,47 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Knowledge testing system</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+    <div class="container">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+
+                <ul class="navbar-nav mr-auto" role="group" aria-label="Basic example">
+                    <li style="padding-left: 10px;">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-outline-info", role = "button" })</li>
+                    <li style="padding-left: 10px;">@Html.ActionLink("About", "About", "Home", null, new { @class = "btn btn-outline-info", role = "button" })</li>
+                    <li style="padding-left: 10px;">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "btn btn-outline-info", role = "button" })</li>
                 </ul>
+
             </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+
+            @Html.Partial("_LoginPartial")
+        </nav>
     </div>
 
+    <div class="container body-content">
+        <br />
+        @RenderBody()
+
+        <footer class="fixed-bottom text-center p-2">
+            <hr />
+            <h5>&copy; @DateTime.Now.Year - Knowledge testing system</h5>
+        </footer>
+    </div>
+    @Scripts.Render("~/favicon.ico");
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
