[WEB] Update views

--- a/TestingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/TestingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 @Html.ActionLink("All users", "Index", "Admin", null, new { @class = "dropdown-item text-center" })
                                 @Html.ActionLink("All roles", "Index", "RoleAdmin", null, new { @class = "dropdown-item text-center" })
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">TEST</a>
+                                @Html.ActionLink("Tests edit", "IndexForAdmin", "Test", null, new { @class = "dropdown-item text-center" })
                             </div>
                         </li>
                     }
