--- a/TestingSystem.WEB/Views/Test/Index.cshtml
+++ b/TestingSystem.WEB/Views/Test/Index.cshtml
@@ -34,7 +34,7 @@
                             @using (Html.BeginForm("RunTest", "Test", FormMethod.Post, null))
                             {
                                 @Html.AntiForgeryToken()
-                                
+
                                 <input data-val="true" name="Id" type="hidden" value="@item.Id">
 
                                 <div class="col-lg-auto">
@@ -51,3 +51,8 @@
     <div class="card-footer">
     </div>
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+}
