[WEB] Update views

--- a/TestingSystem.WEB/Views/Test/IndexForAdmin.cshtml
+++ b/TestingSystem.WEB/Views/Test/IndexForAdmin.cshtml
@@ -52,7 +52,7 @@
                                 @Html.AntiForgeryToken()
                                 <input data-val="true" name="Id" type="hidden" value="@item.Id">
                                 <div class="col-lg-auto">
-                                    <input type="submit" value="Confirm" class="btn btn-sm btn-danger" />
+                                    <input type="submit" value="Delete" class="btn btn-sm btn-danger" />
                                 </div>
                             }
                         </div>
