--- a/TestingSystem.WEB/Views/Test/Details.cshtml
+++ b/TestingSystem.WEB/Views/Test/Details.cshtml
@@ -159,29 +159,29 @@
                     //LoadingElementDuration = 10000
                 }))
                 {
-                    @Html.HiddenFor(m => Model.Id)
                     <!-- Modal body -->
-                    <div class="modal-body">
+                <div class="modal-body">
+                    
+                    <input data-val="true" name="TestId" id="TestId"  type="hidden" value="@Model.Id">
 
-                        <div class="form-group">
-                            <input name="name" value="" class="form-control" required="" placeholder="Enter a question" data-val-required="Required field Name:." />
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control"
-                                   data-val="true"
-                                   required=""
-                                   data-val-number="The field Point: must be a number."
-                                   data-val-range="The number must be in the range from 1 to 10"
-                                   data-val-range-max="10"
-                                   data-val-range-min="1"
-                                   data-val-required="Required field Point:."
-                                   id="Point"
-                                   name="Point"
-                                   value="1"
-                                   type="number"
-                                   placeholder="Enter a score of question" />
-                        </div>
+                    <div class="form-group">
+                        <input data-val="true" name="questionContent" id="questionContent" value="" class="form-control" required="" placeholder="Enter a question" data-val-required="Required field Name:." />
                     </div>
+                    <div class="form-group">
+                        <input class="form-control"
+                               data-val="true"
+                               data-val-number="The field Point: must be a number."
+                               data-val-range="The number must be in the range from 1 to 10"
+                               data-val-range-max="10"
+                               data-val-range-min="1"
+                               data-val-required="Required field Point:."
+                               id="Point"
+                               name="Point"
+                               value="1"
+                               type="number"
+                               placeholder="Enter a score of question" />
+                    </div>
+                </div>
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
@@ -194,3 +194,7 @@
     </div>
 </div>
 
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
