[WEB] Update views

--- a/TestingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/TestingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         <li class="nav-item dropdown" style="padding-left: 10px;">
                             <a class="nav-link dropdown-toggle btn btn-sm btn-outline-info" href="" id="dropdown10" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><strong class="text-danger">Admin management</strong></a>
                             <div class="dropdown-menu" style="margin-left: 20px">
-                                @Html.ActionLink("Add user", "CreateUser", "Admin", null, new { @class = "dropdown-item text-center" })
+                                @*@Html.ActionLink("Add user", "CreateUser", "Admin", null, new { @class = "dropdown-item text-center" })*@
                                 @Html.ActionLink("All users", "Index", "Admin", null, new { @class = "dropdown-item text-center" })
                                 @Html.ActionLink("All roles", "Index", "RoleAdmin", null, new { @class = "dropdown-item text-center" })
                                 <div class="dropdown-divider"></div>
