--- a/TestingSystem.WEB/Views/Test/Details.cshtml
+++ b/TestingSystem.WEB/Views/Test/Details.cshtml
@@ -87,7 +87,7 @@
                     @Html.ActionLink("Add question", "AddQuestion", "Question", new { id = Model.Id }, new { @class = "btn btn-primary", data_toggle = "modal", data_target = "#ModalQuest", role = "button" })
                 </div>
                 <div class="col-lg-auto">
-                    @Html.ActionLink("Back to test", "Index", "Test", null, new { @class = "btn btn-outline-info", role = "button" })
+                    @Html.ActionLink("Back to test", "IndexForAdmin", "Test", null, new { @class = "btn btn-outline-info", role = "button" })
                 </div>
             </div>
         </div>
