--- a/TestingSystem.WEB/Views/Test/ShowQuestion.cshtml
+++ b/TestingSystem.WEB/Views/Test/ShowQuestion.cshtml
@@ -5,6 +5,8 @@
 }
 
 <br />
+    <h4 class=" d-block bg-warning w-75 text-center">Don't Refresh the Page !! ...</h4>
+<br/>
 <div class="card w-75">
     @using (Html.BeginForm("GoNextQuestion", "Test", null, FormMethod.Post))
     {
