--- a/TestingSystem.WEB/Views/Shared/Error.cshtml
+++ b/TestingSystem.WEB/Views/Shared/Error.cshtml
@@ -5,9 +5,11 @@
     <title>Error</title>
 </head>
 <body>
-    <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
-    </hgroup>
+<br/>
+<hgroup>
+    <h1>Error.</h1>
+    <h2>An error occurred while processing your request.</h2>
+    <h3 class="text-danger">@ViewBag.Error</h3>
+</hgroup>
 </body>
 </html>
