--- a/TestingSystem.WEB/Views/Home/Index.cshtml
+++ b/TestingSystem.WEB/Views/Home/Index.cshtml
@@ -2,9 +2,29 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron h-50">
+    <h1>Knowledge testing system</h1>
+    <table class="table table-borderless">
+        <tr>
+            <td style="width: 40%">
+                <ul>
+                    <li>Registration, selection (search) of the test.</li>
+                    <li>Passing the test without time control.</li>
+                    <li>Editing test.</li>
+                    <li>Statistics of testing.</li>
+                    <li>User/Role management.</li>
+                </ul>
+            </td>
+            <td>
+                <div class="align-top">
+                    <img src="~/Content/Images/quiz.png" alt="quiz" style="width:240px;">
+                </div>
+            </td>
+        </tr>
+    </table>
 </div>
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+}
